<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="empty">No records found.</string>
    <string name="app_name">Flash Card</string>
<string name="btnGetCardSet">Get Card Set</string>
<string name="etUserName">Quizlet User Name</string>
<string name="etTerm">Quizlet Search Titles (e.g. math)</string>
<string name="etSavedCards">Get Saved Offline Cards</string>
<string name="etSearchId">Quizlet Set Id</string>
<string name="tvItem">100   Sample Item Name</string>
<string name="tvTotals">Total Card Sets 100</string>
<string name="butRetest">Re-test Incorrect</string>
<string name="resultshead">Flash Card Results</string>
<string name="preferences">User Preferences</string>
<string name="bookmarkhead">Bookmarks</string>
<string name="localcardhead">Offline Cards</string>
<string name="sound">Use Sound Effects</string>
<string name="done">Done</string>
<string name="fontsize">Set Font Sizes</string>
<string name="smaller">Smaller</string>
<string name="normal">Default</string>
<string name="bigger">Bigger</string>
<string name="autosize">Auto Size</string>
<string name="loading">Loading please wait...</string>
<string name="home">New Card Set (Home)</string>
<string name="results">Results</string>
<string name="email">User Email (all lower case)</string>
<string name="authcode">Authentication Code</string>
<string name="regdialog">Registration Entry</string>
<string name="register">Register</string>
<string name="cancel">Cancel</string>
<string name="offline">Selecting these will save to your local drive. (MAX 10) </string>
<string name="deletesaved">Click and hold item to delete. </string>
<string name="instructions">Double tap screen to see the other side of the card.</string>
</resources>
