<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@drawable/port_bg" android:padding="10sp">
	<TableLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:id="@+id/resultsLayout" android:background="@drawable/prefbg">
		<TextView android:id="@+id/tvTitle" android:layout_height="wrap_content"
			android:background="@drawable/resultshdr" android:text="@string/preferences"
			android:textColor="#fff" android:textSize="18sp" android:paddingTop="6sp"
			android:gravity="center_horizontal" android:layout_margin="10sp"
			android:layout_width="fill_parent"></TextView>
		<TableRow android:paddingLeft="10sp" android:background="#dfdfdf"
			android:layout_marginRight="10sp" android:layout_marginLeft="10sp">
			<CheckBox android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textColor="#000"
				android:text="@string/sound" android:id="@+id/cbSoundEffects"
				android:paddingLeft="50sp"></CheckBox>
		</TableRow>
		<TableRow android:layout_marginRight="10sp" android:gravity="center"
			android:layout_marginLeft="10sp" android:background="#999" android:layout_marginTop="0sp">
			<TextView android:id="@+id/tvSetFontSize" android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/fontsize" android:textStyle="bold"
				android:textSize="18sp" android:gravity="center" android:textColor="#fff"></TextView>
		</TableRow>
		<RadioGroup android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="vertical"
			android:id="@+id/rbgFontSizes">

			<RadioButton android:id="@+id/rbSmaller"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:textColor="#000" android:paddingLeft="50sp"
				android:layout_marginLeft="10sp" android:text="@string/smaller"
				android:textSize="12sp"></RadioButton>
			<RadioButton android:id="@+id/rbNormal"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:textColor="#000" android:paddingLeft="50sp"
				android:layout_marginLeft="10sp" android:text="@string/normal"
				android:textSize="16sp"></RadioButton>
			<RadioButton android:id="@+id/rbBigger"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:textColor="#000" android:paddingLeft="50sp"
				android:layout_marginLeft="10sp" android:text="@string/bigger"
				android:textSize="22sp"></RadioButton>
			<RadioButton android:id="@+id/rbAutoSize"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:textColor="#000" android:paddingLeft="50sp"
				android:layout_marginLeft="10sp" android:textSize="30sp" android:text="@string/autosize"></RadioButton>
		</RadioGroup>
		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:background="@drawable/button"
			android:text="@string/done" android:id="@+id/butDone"
			android:paddingLeft="30sp" android:paddingBottom="5sp"
			android:paddingRight="40sp" android:paddingTop="0sp"
			android:layout_marginTop="0sp" android:layout_marginLeft="10sp"
			android:layout_marginRight="10sp" android:layout_marginBottom="5sp"></Button>

	</TableLayout>
</ScrollView>
