<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@drawable/port_bg"
	android:padding="10sp">





	<EditText android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:layout_marginBottom="5sp"
		android:layout_marginTop="10sp" android:inputType="textWebEditText"
		android:imeOptions="actionDone" android:id="@+id/etSearchTerm"
		android:textColor="#000"></EditText>
	<RadioGroup android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:id="@+id/rGroupType">
		<RadioButton android:id="@+id/rbUserName"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/etUserName" android:paddingLeft="40sp"
			android:hint="0" android:shadowColor="#000" android:shadowDx="1"
			android:shadowDy="2" android:shadowRadius="1"></RadioButton>
		<RadioButton android:id="@+id/rbTerm"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/etTerm" android:paddingLeft="40sp"
			android:checked="true" android:hint="1" android:shadowColor="#000"
			android:shadowDx="1" android:shadowDy="2" android:shadowRadius="1"></RadioButton>
		<RadioButton android:id="@+id/rbId" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/etSearchId"
			android:paddingLeft="40sp" android:hint="2" android:shadowColor="#000"
			android:shadowDx="1" android:shadowDy="2" android:shadowRadius="1"></RadioButton>
		<RadioButton android:id="@+id/rbSaved" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/etSavedCards"
			android:paddingLeft="40sp" android:hint="3" android:shadowColor="#000"
			android:shadowDx="1" android:shadowDy="2" android:shadowRadius="1"></RadioButton>
	</RadioGroup>

	<Button android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/btnGetCardSet"
		android:paddingLeft="30sp" android:background="@drawable/button"
		android:paddingRight="40sp" android:layout_gravity="right"
		android:paddingTop="0sp" android:paddingBottom="8sp"
		android:textStyle="bold" android:textColor="#42493f" android:id="@+id/btnSearch"></Button>


	<RelativeLayout android:id="@+id/bottomInfo"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:gravity="left|bottom">
		<ImageView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:background="@drawable/poweredby"
			android:id="@+id/ivQuizlet" android:layout_marginTop="5sp"></ImageView>
		<ImageView android:layout_height="wrap_content"
			android:background="@drawable/info" android:id="@+id/ivInfo"
			android:layout_marginRight="0sp" android:layout_marginLeft="20sp"
			android:layout_alignParentRight="true" android:layout_width="wrap_content"
			android:layout_marginBottom="5sp"></ImageView>


	</RelativeLayout>


</LinearLayout>
